--- a/main.html
+++ b/main.html
@@ -7,10 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+	<head></head>
+	<main>
+
+		<div class="fbc">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+
+		</div>
+	</main>
+	<footer></footer>
+
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
